metadata-classic/objects/RequestCategory__c.object
<CustomObject>
    <description>All available category.</description>
    <fields>
        <fullName>CategoryNamesMatch__c</fullName>
        <description>Checks whether or not the Record Name is equal to Category Name (rca_name__c). These should always be the same, but sometimes they don&apos;t get updated.</description>
        <formula>rca_name__c = Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Names Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnrollAProEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enroll A Pro Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OutreachTypeChangeTS__c</fullName>
        <description>Timestamp of when outreach type change happens.</description>
        <label>Outreach Type Change TS</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OutreachTypeChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outreach Type Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>outreach_type__c</fullName>
        <label>Outreach Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OutreachType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>rca_active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if the request category is active</description>
        <label>Category Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rca_core_category__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines whether or not it is a core request category</description>
        <label>Core Category</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rca_delete_time__c</fullName>
        <description>Date/time the request category was deleted</description>
        <label>Delete Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rca_keywords__c</fullName>
        <description>Keywords related to the request category</description>
        <label>Keywords</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rca_name__c</fullName>
        <label>Category Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rca_request_category_id__c</fullName>
        <externalId>true</externalId>
        <label>Category Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Request Category</label>
    <listViews>
        <fullName>ActiveRequestCategories</fullName>
        <columns>NAME</columns>
        <columns>rca_active__c</columns>
        <columns>rca_request_category_id__c</columns>
        <columns>rca_core_category__c</columns>
        <columns>outreach_type__c</columns>
        <columns>EnrollAProEnabled__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EnrollAProEnabled__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>02 - Active Request Categories</label>
        <sharedTo>
            <role>LabsFrontLineUser</role>
            <role>LabsManagingUser</role>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EarlyEnrollment</fullName>
        <columns>NAME</columns>
        <columns>rca_active__c</columns>
        <columns>rca_request_category_id__c</columns>
        <columns>rca_core_category__c</columns>
        <columns>outreach_type__c</columns>
        <columns>EnrollAProEnabled__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>outreach_type__c</field>
            <operation>equals</operation>
            <value>early_enrollment</value>
        </filters>
        <label>04 - Early Enrollment</label>
        <sharedTo>
            <role>LabsFrontLineUser</role>
            <role>LabsManagingUser</role>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Enterprise</fullName>
        <columns>NAME</columns>
        <columns>rca_active__c</columns>
        <columns>rca_request_category_id__c</columns>
        <columns>rca_core_category__c</columns>
        <columns>outreach_type__c</columns>
        <columns>EnrollAProEnabled__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>outreach_type__c</field>
            <operation>equals</operation>
            <value>Enterprise</value>
        </filters>
        <label>06 - Enterprise</label>
        <sharedTo>
            <role>LabsFrontLineUser</role>
            <role>LabsManagingUser</role>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>InactiveRequestCategories</fullName>
        <columns>NAME</columns>
        <columns>rca_active__c</columns>
        <columns>rca_request_category_id__c</columns>
        <columns>rca_core_category__c</columns>
        <columns>outreach_type__c</columns>
        <columns>EnrollAProEnabled__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EnrollAProEnabled__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>02 - Inactive Request Categories</label>
        <sharedTo>
            <role>LabsFrontLineUser</role>
            <role>LabsManagingUser</role>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MPTest</fullName>
        <columns>NAME</columns>
        <columns>rca_name__c</columns>
        <columns>outreach_type__c</columns>
        <columns>rca_active__c</columns>
        <columns>rca_request_category_id__c</columns>
        <columns>rca_core_category__c</columns>
        <columns>EnrollAProEnabled__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rca_name__c</field>
            <operation>contains</operation>
            <value>custom</value>
        </filters>
        <label>MP_test</label>
        <sharedTo>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ProductEnabled</fullName>
        <columns>NAME</columns>
        <columns>rca_active__c</columns>
        <columns>rca_request_category_id__c</columns>
        <columns>rca_core_category__c</columns>
        <columns>outreach_type__c</columns>
        <columns>EnrollAProEnabled__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>outreach_type__c</field>
            <operation>equals</operation>
            <value>product_enabled</value>
        </filters>
        <label>05 - Product Enabled</label>
        <sharedTo>
            <role>LabsFrontLineUser</role>
            <role>LabsManagingUser</role>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X01_All_Request_Categories</fullName>
        <columns>NAME</columns>
        <columns>rca_active__c</columns>
        <columns>rca_request_category_id__c</columns>
        <columns>rca_core_category__c</columns>
        <columns>outreach_type__c</columns>
        <columns>EnrollAProEnabled__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>01 - All</label>
        <sharedTo>
            <role>LabsFrontLineUser</role>
            <role>LabsManagingUser</role>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Request Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Categories</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>